# vrptk

./: .gitignore  CMakeLists.txt  Makefile  small.xml  tasks.json  vcpkg.json
datasets/gehring-and-homberger-1999-c1/: C1_02_02.xml  C1_02_03.xml  C1_02_04.xml  C1_02_05.xml  C1_02_06.xml  C1_02_07.xml  C1_02_08.xml  C1_02_09.xml  C1_02_10.xml  C1_04_02.xml  C1_04_03.xml  C1_04_04.xml  C1_04_05.xml  C1_04_06.xml  C1_04_07.xml  C1_04_08.xml  C1_04_09.xml  C1_04_10.xml  C1_06_02.xml  C1_06_03.xml  C1_06_04.xml  C1_06_05.xml  C1_06_06.xml  C1_06_07.xml  C1_06_08.xml  C1_06_09.xml  C1_06_10.xml  C1_08_02.xml  C1_08_03.xml  C1_08_04.xml  C1_08_05.xml  C1_08_06.xml  C1_08_07.xml  C1_08_08.xml  C1_08_09.xml  C1_08_10.xml  C1_10_02.xml  C1_10_03.xml  C1_10_04.xml  C1_10_05.xml  (+5 more)
datasets/gehring-and-homberger-1999-c2/: C2_02_01.xml  C2_02_02.xml  C2_02_03.xml  C2_02_04.xml  C2_02_05.xml  C2_02_06.xml  C2_02_07.xml  C2_02_08.xml  C2_02_09.xml  C2_02_10.xml  C2_04_01.xml  C2_04_02.xml  C2_04_03.xml  C2_04_04.xml  C2_04_05.xml  C2_04_06.xml  C2_04_07.xml  C2_04_08.xml  C2_04_09.xml  C2_04_10.xml  C2_06_01.xml  C2_06_02.xml  C2_06_03.xml  C2_06_04.xml  C2_06_05.xml  C2_06_06.xml  C2_06_07.xml  C2_06_08.xml  C2_06_09.xml  C2_06_10.xml  C2_08_01.xml  C2_08_02.xml  C2_08_03.xml  C2_08_04.xml  C2_08_05.xml  C2_08_06.xml  C2_08_07.xml  C2_08_08.xml  C2_08_09.xml  C2_08_10.xml  (+10 more)
datasets/gehring-and-homberger-1999-r1/: R1_02_02.xml  R1_02_03.xml  R1_02_04.xml  R1_02_05.xml  R1_02_06.xml  R1_02_07.xml  R1_02_08.xml  R1_02_09.xml  R1_02_10.xml  R1_04_02.xml  R1_04_03.xml  R1_04_04.xml  R1_04_05.xml  R1_04_06.xml  R1_04_07.xml  R1_04_08.xml  R1_04_09.xml  R1_04_10.xml  R1_06_02.xml  R1_06_03.xml  R1_06_04.xml  R1_06_05.xml  R1_06_06.xml  R1_06_07.xml  R1_06_08.xml  R1_06_09.xml  R1_06_10.xml  R1_08_02.xml  R1_08_03.xml  R1_08_04.xml  R1_08_05.xml  R1_08_06.xml  R1_08_07.xml  R1_08_08.xml  R1_08_09.xml  R1_08_10.xml  R1_10_02.xml  R1_10_03.xml  R1_10_04.xml  R1_10_05.xml  (+5 more)
datasets/gehring-and-homberger-1999-r2/: R2_02_01.xml  R2_02_02.xml  R2_02_03.xml  R2_02_04.xml  R2_02_05.xml  R2_02_06.xml  R2_02_07.xml  R2_02_08.xml  R2_02_09.xml  R2_02_10.xml  R2_04_01.xml  R2_04_02.xml  R2_04_03.xml  R2_04_04.xml  R2_04_05.xml  R2_04_06.xml  R2_04_07.xml  R2_04_08.xml  R2_04_09.xml  R2_04_10.xml  R2_06_01.xml  R2_06_02.xml  R2_06_03.xml  R2_06_04.xml  R2_06_05.xml  R2_06_06.xml  R2_06_07.xml  R2_06_08.xml  R2_06_09.xml  R2_06_10.xml  R2_08_01.xml  R2_08_02.xml  R2_08_03.xml  R2_08_04.xml  R2_08_05.xml  R2_08_06.xml  R2_08_07.xml  R2_08_08.xml  R2_08_09.xml  R2_08_10.xml  (+10 more)
datasets/gehring-and-homberger-1999-rc1/: RC1_02_02.xml  RC1_02_03.xml  RC1_02_04.xml  RC1_02_05.xml  RC1_02_06.xml  RC1_02_07.xml  RC1_02_08.xml  RC1_02_09.xml  RC1_02_10.xml  RC1_04_02.xml  RC1_04_03.xml  RC1_04_04.xml  RC1_04_05.xml  RC1_04_06.xml  RC1_04_07.xml  RC1_04_08.xml  RC1_04_09.xml  RC1_04_10.xml  RC1_06_02.xml  RC1_06_03.xml  RC1_06_04.xml  RC1_06_05.xml  RC1_06_06.xml  RC1_06_07.xml  RC1_06_08.xml  RC1_06_09.xml  RC1_06_10.xml  RC1_08_02.xml  RC1_08_03.xml  RC1_08_04.xml  RC1_08_05.xml  RC1_08_06.xml  RC1_08_07.xml  RC1_08_08.xml  RC1_08_09.xml  RC1_08_10.xml  RC1_10_02.xml  RC1_10_03.xml  RC1_10_04.xml  RC1_10_05.xml  (+6 more)
datasets/gehring-and-homberger-1999-rc2/: RC2_02_01.xml  RC2_02_02.xml  RC2_02_03.xml  RC2_02_04.xml  RC2_02_05.xml  RC2_02_06.xml  RC2_02_07.xml  RC2_02_08.xml  RC2_02_09.xml  RC2_02_10.xml  RC2_04_01.xml  RC2_04_02.xml  RC2_04_03.xml  RC2_04_04.xml  RC2_04_05.xml  RC2_04_06.xml  RC2_04_07.xml  RC2_04_08.xml  RC2_04_09.xml  RC2_04_10.xml  RC2_06_01.xml  RC2_06_02.xml  RC2_06_03.xml  RC2_06_04.xml  RC2_06_05.xml  RC2_06_06.xml  RC2_06_07.xml  RC2_06_08.xml  RC2_06_09.xml  RC2_06_10.xml  RC2_08_01.xml  RC2_08_02.xml  RC2_08_03.xml  RC2_08_04.xml  RC2_08_05.xml  RC2_08_06.xml  RC2_08_07.xml  RC2_08_08.xml  RC2_08_09.xml  RC2_08_10.xml  (+10 more)
glidescope/: engine.cpp  engine.h  graphics.cpp  graphics.h  imspinner.h  main.cpp  state.h  utils.cpp  utils.h  view.h
glidescope/views/: fleet.cpp  fleet.h  inspector.cpp  inspector.h  nodes.cpp  nodes.h  schedule.cpp  schedule.h  solution.cpp  solution.h
lib/: libvrptk.dylib
py/: cy.py  dataset.py  embeddings.py
src/: dataset.h  efvrptw.cpp  efvrptw.h  fleet.h  node.h  request.h  solution.h  test.h  vrp.cpp  vrp.h  vrptw.cpp  vrptw.h
src/loaders/: efvrptw_loader.h  loader.h  soln_loader.cpp  soln_loader.h  vrptw_loader.h  xml_loader.cpp  xml_loader.h
src/solvers/: solver.h  vrptw_hexaly.cpp  vrptw_hexaly.h
test/: main.cpp
